2009-05-16   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl,texi2html.init: handle @DH{}, @dh{}, @TH{}, @th{}. 
	use set_conf and get_conf to get and set configuration.

2009-05-02   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: record the real element the index entry is in, 
	not only the last heading.

2009-05-01   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: ignore @setfilename in included file, consistently
	with the texinfo manual.
	Allow @cartouche to be handled like a simple_format.
	* texi2html.pl, texi2html.init: @direntry is handled like a 
	menu, not a raw environment.

2009-04-27   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: simplify index handling and fix syn*index to do 
	the same than in the documentation and in makeinfo/texi2dvi.
	Fix index_summary_file.
	Fix line count with a def* protected end of line at the end of
	the file.
	* texi2html.init: @page stops paragraphs.

2009-04-25   Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: handle @direntry and @dircategory 
	better.
	Add a function reference $line_command and a hash %line_command_map
	for processing line @-commands and use it for @title, @subtitle and 
	@author, with a corresponding change in the titlepage formatting 
	also allowing to have something more in line with what texi2dvi 
	produces.
	verbatiminclude is now a $raw command argument distinct from 
	verbatim.
	Don't close out file, to let user code close it without erroring.
	Fix output to STDOUT for info, and splitting of info output when 
	output to STDOUT, or not split.
	Use stdin as input if there is no file in argument and stdin
	is not a tty and fix stdin and stdout names used.
	Output an error message only if there is an associated line. 
	Use plain warn for messages that are not associated with a specific
	location.
	Pass line numbers to substitute_text for special regions and 
	special commands like refs and footnotes.
